[package]
name = "short-name-derive"
version = "0.1.0"
authors = ["Vladyslav Hordiienko <hord.vlad@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
short-name-traits = { path = "../short-name-traits" }
regex = "1.3"
lazy_static = "1.4"